Table Users {
  id integer [primary key]
  username varchar [unique]
  name varchar
  phone varchar
  email varchar [unique]
  ipadress_hash varchar [note: 'hashed']
  subnetmask_hash varchar [note: 'hashed']
  online bool
  avatar varchar
  statistics integer
  password_hash varchar [note: 'hashed']
  mfa_enabled_at bool [note: 'true send random email pin']
  mfa_backup_codes varchar
  mfa_secret varchar
  tournament integer
  registed timestamp
  last_login timestamp [default: `now()`]
}


//-- 1. HAUPTTABELLE: Turniere
Table Tournaments {
  id integer [primary key]
  name varchar [not null]
  status varchar [note: 'registration, in_progress, finished, cancelled']
  max_players integer [default: 8, note: 'maximal 8 Spieler']
  current_players integer [default: 0]
  created_at timestamp [default: `now()`]
  started_at timestamp
  finished_at timestamp
  winner_id integer
}

//-- 2. ZWISCHENTABELLE: Wer nimmt am Turnier teil?
Table Tournament_Participants {
  id integer [primary key]
  tournament_id integer [not null]
  user_id integer [not null]
  tournament_alias varchar [note: 'Nickname im Turnier']
  joined_at timestamp [default: `now()`]
  placement integer [note: '1=Winner, 2=Second, etc.']
}

//-- 3. MATCHES: Die einzelnen Spiele im Turnier
Table Tournament_Matches {
  id integer [primary key]
  tournament_id integer [not null]
  round integer [note: 'Runde: 1=Viertelfinale, 2=Halbfinale, 3=Finale']
  match_number integer [note: 'Match 1, 2, 3, 4 pro Runde']
  player1_id integer
  player2_id integer
  player1_score integer [default: 0]
  player2_score integer [default: 0]
  winner_id integer
  status varchar [note: 'waiting, in_progress, finished']
  started_at timestamp
  finished_at timestamp
}

//-- Foreign Keys
Ref: Tournament_Participants.tournament_id > Tournaments.id
Ref: Tournament_Participants.user_id > Users.id
Ref: Tournament_Matches.tournament_id > Tournaments.id
Ref: Tournament_Matches.player1_id > Users.id
Ref: Tournament_Matches.player2_id > Users.id
Ref: Tournament_Matches.winner_id > Users.id
Ref: Tournaments.winner_id > Users.id